turtleart.circlesquare.CircleSquare.scala.error
Compilation error:
CircleSquare:9: error: not found: value cerlce
  cerlce(50)
  ^